Considering an alternative design for web modules

--- a/web/app/application/view.tpl.html
+++ b/web/app/application/view.tpl.html
@@ -1,5 +1,5 @@
-<cn-record-view list-model="cnList" view-model="cnView"></cn-record-view>
+<cn-record-view model="model"></cn-record-view>
 <div class="vertical-spacer"></div>
-<cn-record-list heading="Application Participants" list-model="cnView.cnParticipantList"></cn-record-list>
+<cn-record-list heading="Application Participants" model="model.cnView.cnParticipantModel"></cn-record-list>
 <div class="vertical-spacer"></div>
-<cn-record-list heading="User Access List" list-model="cnView.cnUserList"></cn-record-list>
+<cn-record-list heading="User Access List" model="model.cnView.cnUserModel"></cn-record-list>
