--- a/web/app/user/view.tpl.html
+++ b/web/app/user/view.tpl.html
@@ -1,3 +1,3 @@
-<cn-record-view list-model="cnList" view-model="cnView"></cn-record-view>
+<cn-record-view model="model"></cn-record-view>
 <div class="vertical-spacer"></div>
-<cn-record-list heading="Access List" list-model="cnView.cnAccessList" remove-columns="user"></cn-record-list>
+<cn-record-list heading="Access List" model="model.cnView.cnAccessModel" remove-columns="user"></cn-record-list>
