--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -10,57 +10,69 @@
           <div class="input-group"
                ng-class="{ 'has-feedback has-error': innerForm.name.$dirty && innerForm.name.$invalid }">
             <input ng-if="'string' == input.type"
-                   ng-attr-id="{{ input.key }}"
-                   name="name"
-                   ng-model="record[input.key]"
-                   cn-change="patch( input.key )"
-                   class="form-control"
-                   type="text"
-                   autocomplete="off"
-                   ng-readonly="input.constant"
-                   ng-required="input.required"></input>
+              ng-attr-id="{{ input.key }}"
+              name="name"
+              ng-model="record[input.key]"
+              cn-change="patch( input.key )"
+              class="form-control"
+              type="text"
+              autocomplete="off"
+              ng-readonly="input.constant"
+              ng-required="model.metadata[input.key].required"></input>
             <input ng-if="'typeahead' == input.type"
-                   ng-attr-id="{{ input.key }}"
-                   name="name"
-                   ng-model="record[input.key]"
-                   typeahead="item.value for item in getTypeaheadValues( input.key, $viewValue )"
-                   typeahead-loading="true"
-                   typeahead-min-length="2"
-                   cn-change="patch( input.key )"
-                   class="form-control"
-                   type="text"
-                   placeholder="(Type the first few letters to search possible values)"
-                   autocomplete="off"
-                   ng-readonly="input.constant"
-                   ng-required="input.required"></input>
+              ng-attr-id="{{ input.key }}"
+              name="name"
+              ng-model="record[input.key]"
+              typeahead="item.value for item in getTypeaheadValues( input.key, $viewValue )"
+              typeahead-loading="true"
+              typeahead-min-length="2"
+              cn-change="patch( input.key )"
+              class="form-control"
+              type="text"
+              placeholder="(Type the first few letters to search possible values)"
+              autocomplete="off"
+              ng-readonly="input.constant"
+              ng-required="model.metadata[input.key].required"></input>
+            <input ng-if="'date' == input.type"
+              ng-attr-id="{{ input.key }}"
+              name="name"
+              ng-model="record[input.key]"
+              ng-change="patch( input.key )"
+              class="form-control"
+              type="text"
+              datepicker-popup="yyyy-MM-dd"
+              is-open="isOpen"
+              ng-click="isOpen = true"
+              show-weeks="false"
+              onkeydown="return false"></input>
             <input ng-if="'integer' == input.type"
-                   ng-attr-id="{{ input.key }}"
-                   name="name"
-                   ng-model="record[input.key]"
-                   cn-change="patch( input.key )"
-                   class="form-control"
-                   type="number"
-                   pattern="\d*"
-                   autocomplete="off"
-                   ng-readonly="input.constant"
-                   ng-required="input.required"></input>
+              ng-attr-id="{{ input.key }}"
+              name="name"
+              ng-model="record[input.key]"
+              cn-change="patch( input.key )"
+              class="form-control"
+              type="number"
+              pattern="\d*"
+              autocomplete="off"
+              ng-readonly="input.constant"
+              ng-required="model.metadata[input.key].required"></input>
             <select ng-if="'boolean' == input.type || 'enum' == input.type"
-                    ng-attr-id="{{ input.key }}"
-                    name="name"
-                    ng-options="item.value as item.name for item in input.enumList"
-                    ng-model="record[input.key]"
-                    cn-change="patch( input.key )"
-                    class="form-control"
-                    ng-readonly="input.constant"
-                    ng-required="input.required"></select>
+              ng-attr-id="{{ input.key }}"
+              name="name"
+              ng-options="item.value as item.name for item in input.enumList"
+              ng-model="record[input.key]"
+              cn-change="patch( input.key )"
+              class="form-control"
+              ng-readonly="input.constant"
+              ng-required="model.metadata[input.key].required"></select>
             <textarea ng-if="'text' == input.type || 'constant text' == input.type"
-                      ng-attr-id="{{ input.key }}"
-                      name="name"
-                      ng-model="record[input.key]"
-                      cn-change="patch( input.key )"
-                      class="form-control"
-                      ng-readonly="input.constant"
-                      ng-required="input.required"></textarea>
+              ng-attr-id="{{ input.key }}"
+              name="name"
+              ng-model="record[input.key]"
+              cn-change="patch( input.key )"
+              class="form-control"
+              ng-readonly="input.constant"
+              ng-required="model.metadata[input.key].required"></textarea>
           </div>
           <span class="help-block" ng-if="innerForm.name.$dirty && innerForm.name.$error.required">
             Cannot be blank
