--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -3,7 +3,7 @@
 </div>
 <form name="form" class="form-horizontal" novalidate>
   <div class="form-body">
-    <ng-form ng-repeat="input in inputList"
+    <ng-form ng-repeat="input in inputArray"
              name="innerForm">
       <div class="form-group"
            ng-class="{ 'has-feedback has-error': innerForm.name.$dirty && innerForm.name.$invalid }">
@@ -83,7 +83,7 @@
   </div>
   <div class="form-footer rounded-bottom">
     <button type="button" class="btn btn-danger"
-            cn-really-message="Are you sure you want to delete this {{ model.cnView.subject }}?"
+            cn-really-message="Are you sure you want to delete this {{ model.subject }}?"
             cn-really-click="delete()">
       <i class="glyphicon glyphicon-remove-sign"></i> Delete
     </button>
