Creating "root" state, making home, 404 and 500 children

--- a/web/app/cenozo/toolbelt.tpl.html
+++ b/web/app/cenozo/toolbelt.tpl.html
@@ -1,5 +1,5 @@
 <div class="btn-group">
-  <a ui-sref="home"
+  <a ui-sref="root.home"
      class="btn btn-default"
      tooltip="Go to home screen"
      tooltip-placement="bottom">
