Adding background image, tweaking fade transitions

--- a/web/app/error/403.tpl.html
+++ b/web/app/error/403.tpl.html
@@ -1,7 +1,10 @@
-<div class="container-fluid">
-  <h3 class="text-primary">Forbidden (403)</h3>
+<div class="inner-view-frame">
   <div class="container-fluid">
-    Sorry, but the <strong>{{ model.role.name }}</strong> role does not have access to the page you requested.
-    Please try logging in under a different role and try again.
+    <h3 class="text-primary">Forbidden (403)</h3>
+    <div class="container-fluid">
+      Sorry, but the <strong>{{ model.role.name }}</strong> role does not have access to the page you requested.
+      Please try logging in under a different role and try again.
+    </div>
   </div>
 </div>
+<div class="gradient-footer"></div>
