--- a/web/app/error/404.tpl.html
+++ b/web/app/error/404.tpl.html
@@ -1,4 +1,7 @@
-<div class="container-fluid">
-  <h3 class="text-primary">Page not found (404)</h3>
-  <div class="container-fluid">Sorry, but the page you requested does not exist.</div>
+<div class="inner-view-frame">
+  <div class="container-fluid">
+    <h3 class="text-primary">Page not found (404)</h3>
+    <div class="container-fluid">Sorry, but the page you requested does not exist.</div>
+  </div>
 </div>
+<div class="gradient-footer"></div>
