--- a/web/app/error/500.tpl.html
+++ b/web/app/error/500.tpl.html
@@ -1,4 +1,7 @@
-<div class="container-fluid">
-  <h3 class="text-primary">Internal Server Error (500)</h3>
-  <div class="container-fluid">Sorry, but the page you requested is currently unavailable.</div>
+<div class="inner-view-frame">
+  <div class="container-fluid">
+    <h3 class="text-primary">Internal Server Error (500)</h3>
+    <div class="container-fluid">Sorry, the server was unable to respond to your request.</div>
+  </div>
 </div>
+<div class="gradient-footer"></div>
