--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -20,7 +20,7 @@
               type="text"
               autocomplete="off"
               ng-readonly="input.constant"
-              ng-required="model.metadata[input.key].required"></input>
+              ng-required="model.metadata.columnList[input.key].required"></input>
             <input ng-if="'typeahead' == input.type"
               ng-attr-id="{{ input.key }}"
               name="name"
@@ -34,7 +34,7 @@
               placeholder="(Type the first few letters to search possible values)"
               autocomplete="off"
               ng-readonly="input.constant"
-              ng-required="model.metadata[input.key].required"></input>
+              ng-required="model.metadata.columnList[input.key].required"></input>
             <input ng-if="'date' == input.type"
               ng-attr-id="{{ input.key }}"
               name="name"
@@ -55,7 +55,7 @@
               cn-change="patch( input.key )"
               class="form-control"
               ng-readonly="input.constant || !input.enumList"
-              ng-required="model.metadata[input.key].required"></select>
+              ng-required="model.metadata.columnList[input.key].required"></select>
             <textarea ng-if="'text' == input.type || 'constant text' == input.type"
               ng-attr-id="{{ input.key }}"
               name="name"
@@ -63,7 +63,7 @@
               cn-change="patch( input.key )"
               class="form-control"
               ng-readonly="input.constant"
-              ng-required="model.metadata[input.key].required"></textarea>
+              ng-required="model.metadata.columnList[input.key].required"></textarea>
           </div>
           <span class="help-block" ng-if="innerForm.name.$dirty && innerForm.name.$error.required">
             Cannot be blank
