--- a/web/app/alternate/view.tpl.html
+++ b/web/app/alternate/view.tpl.html
@@ -1,1 +1,5 @@
 <cn-record-view model="model"></cn-record-view>
+<div class="vertical-spacer"></div>
+<cn-record-list heading="Address List" model="model.cnView.cnAddressModel"></cn-record-list>
+<div class="vertical-spacer"></div>
+<cn-record-list heading="Phone List" model="model.cnView.cnPhoneModel"></cn-record-list>
